fixes for asset precompilation & dependency injection

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>AaS Demo</title>
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css"/>
-  <link rel="stylesheet" href="stylesheets/aas_demo.css"/>
+  <link rel="stylesheet" href="stylesheets/app.css"/>
   <link rel="stylesheet" href="stylesheets/vendor/dialogs.min.css"/>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.8/angular.js"></script>
@@ -18,7 +18,7 @@
   <script src="//cdn.jsdelivr.net/lodash/2.1.0/lodash.compat.js"></script>
   <script src="//api.filepicker.io/v1/filepicker.js"></script>
 
-  <script src="javascripts/aas_demo.js"></script>
+  <script src="javascripts/app.js"></script>
   <script src="javascripts/services.js"></script>
   <script src="javascripts/controllers.js"></script>
   <script src="javascripts/filters.js"></script>
