--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>AaS Demo</title>
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css"/>
+  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"/>
   <link rel="stylesheet" href="stylesheets/app.css"/>
   <link rel="stylesheet" href="stylesheets/vendor/dialogs.min.css"/>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
